@@ -1,6 +1,14 @@
 devel
 -----
 
+* Changed HTTP response code for error number 1521 from 500 to 400.
+
+  Error 1521 (query collection lock failed) is nowadays only emitted by
+  traversals, when a collection is accessed during the traversal that has
+  not been specified in the WITH statement of the query. 
+  Thus returning HTTP 500 is not a good idea, as it is clearly a user error
+  that triggered the problem.
+
 * Renamed the `--frontend.*` startup options to `--web-interface.*`:
 
   - `--frontend.proxy-request.check` -> `--web-interface.proxy-request.check`
